<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="hike_trail_length_labels">
        <item>1 Mile</item>
        <item>2 Miles</item>
        <item>4 Miles</item>
        <item>6 Miles</item>
        <item>All</item>
    </string-array>
    <string-array name="hike_trail_difficulty_labels">
        <item>Easy</item>
        <item>Moderate</item>
        <item>More Difficult</item>
        <item>Most Difficult</item>
    </string-array>
    <string-array name="hike_trail_climb_labels">
        <item>Level</item>
        <item>Climbs Gently</item>
        <item>Climbs Moderately</item>
        <item>Climbs Steeply</item>
    </string-array>
    <string-array name="location_distance_labels">
        <item>1 Mile</item>
        <item>10 Miles</item>
        <item>20 Miles</item>
        <item>50 Miles</item>
        <item>100 Miles</item>
    </string-array>
    <string-array name="location_relto_labels">
        <item>Address</item>
        <item>City, St</item>
        <item>Zip</item>
        <item>Current Location</item>
    </string-array>

    <string name="information_label_hike_details">Hike Details</string>
    <string name="title_activity_main">WNC Waterfalls</string>
    <string name="btn_main_search_name">Search by Name</string>
    <string name="btn_main_search_hike">Search by Hike</string>
    <string name="btn_main_search_location">Search by Location</string>
    <string name="btn_main_search_shared">Falls I\'ve Shared</string>
    <string name="btn_main_search_all">All Waterfalls</string>
    <string name="btn_main_app_info">App Info</string>
    <string name="action_share">Share</string>
    <string name="app_name">WNC Waterfalls</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_item_map_type_street">Street</string>
    <string name="menu_item_map_type_terrain">Terrain</string>
    <string name="menu_item_map_type_none">Blank</string>
    <string name="menu_item_map_show_overlay">Offline Map</string>
    <string name="menu_item_map_tracking">Tracking</string>
    <string name="action_search">Search</string>
    <string name="action_results">Results</string>
    <string name="action_information">Information</string>
    <string name="search_find_button">Find</string>
    <string name="search_shared_checkbox">Only Falls I\'ve Shared</string>
    <string name="search_waterfall_name_hint">Find Waterfalls By Name</string>
    <string name="search_hike_trail_length_spinner_prompt">Trail Length</string>
    <string name="search_hike_trail_difficulty_spinner_prompt">Trail Difficulty</string>
    <string name="search_hike_trail_climb_spinner_prompt">Trail Climbing</string>
    <string name="search_hike_trail_upto_label">Find Waterfalls by Hike Details</string>
    <string name="search_hike_trail_upto_hint">(less/easier than each selection)</string>
    <string name="search_location_distance_label">Find Waterfalls By Location</string>
    <string name="search_location_radius_hint">(Distance is "as the crow flies". Driving distance may be longer.)</string>
    <string name="search_location_distance_hint">Within</string>
    <string name="search_location_relto_hint">Of</string>
    <string name="information_label_description">Description</string>
    <string name="information_label_hike_description">The Hike</string>
    <string name="information_label_details">Waterfall Statistics</string>
    <string name="information_label_directions">Driving Directions</string>
    <string name="app_info">App Support and Information</string>
    <string name="app_info_license_label">License</string>
    <string name="app_info_support_label">Support Information</string>
    <string name="app_info_attribution_label">Attributions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete.  Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_start">Start Download</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel Download</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="text_button_clear_mbtiles">Clear Unzipped Offline Maps</string>
    <string name="expansion_download_dialog_title">Download Offline Maps?</string>
    <string name="expansion_download_dialog_message">Offline maps are not installed. Without them, you will need a network connection to see the maps. Download offline maps now?</string>
    <string name="expansion_download_dialog_button_download">Download</string>
    <string name="expansion_download_dialog_button_skip">Skip</string>
    <string name="play_services_check_dialog_title">Google Play Services</string>
    <string name="play_services_check_dialog_message">Google Play Services is not installed. Without it, maps will not work. Install now?</string>
    <string name="play_services_check_dialog_button_download">Install</string>
    <string name="play_services_check_dialog_button_skip">Skip</string>
    <string name="dialog_play_services_not_supported_title">Maps Unavailable</string>
    <string name="dialog_play_services_not_supported_message">Google Play Services is not supported on your device. Maps will be unavailable.</string>
    <string name="title_activity_search">Waterfall Search</string>

</resources>