<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_item_map_types"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_share"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_map_types"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_item_map_type_none"
                    android:checked="true"
                    android:title="@string/menu_item_map_type_none"/>
                <item
                    android:id="@+id/menu_item_map_type_street"
                    android:checked="false"
                    android:title="@string/menu_item_map_type_street"/>
                <item
                    android:id="@+id/menu_item_map_type_terrain"
                    android:checked="false"
                    android:title="@string/menu_item_map_type_terrain"/>
            </group>

            <item
                android:id="@+id/menu_item_map_show_overlay"
                android:checkable="true"
                android:checked="true"
                android:enabled="false"
                android:title="@string/menu_item_map_show_overlay"/>
            <item
                android:id="@+id/menu_item_map_tracking"
                android:checkable="true"
                android:checked="false"
                android:title="@string/menu_item_map_tracking"/>
        </menu>
    </item>

</menu>