<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/location_distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_location_distance_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/location_distance_radius_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location_distance_label"
        android:layout_marginBottom="10dp"
        android:text="@string/search_location_radius_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/location_distance_hint_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location_distance_radius_hint"
        android:text="@string/search_location_distance_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/search_location_distance_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/location_distance_hint_txt" />

    <TextView
        android:id="@+id/location_relto_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_location_distance_spinner"
        android:text="@string/search_location_relto_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/search_location_relto_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/location_relto_hint" />

    <EditText
        android:id="@+id/search_location_relto_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/search_location_relto_spinner"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <CheckBox
        android:id="@+id/search_location_shared_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_location_find_button"
        android:layout_alignParentLeft="true"
        android:text="@string/search_shared_checkbox" />

    <Button
        android:id="@+id/search_location_find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search_find_button" />

</RelativeLayout>