<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/search_waterfall_find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search_find_button" />

    <TextView
        android:id="@+id/search_waterfall_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_waterfall_name_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/search_waterfall_shared_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_waterfall_find_button"
        android:layout_alignParentLeft="true"
        android:text="@string/search_shared_checkbox" />

    <EditText
        android:id="@+id/search_waterfall_name_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/search_waterfall_name_hint"
        android:ems="10"
        android:hint="@string/search_waterfall_name_hint" >
    </EditText>

</RelativeLayout>