<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/app_info_support_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_support_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/app_info_support_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/app_info_attribution_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_attribution_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/app_info_attribution_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/app_info_license_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_license_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/app_info_license_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" />
    </LinearLayout>

</ScrollView>