<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/information_waterfall_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/information_waterfall_name" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/information_waterfall_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/information_label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_label_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_label_hike_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_label_hike_details"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_content_hike_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_label_hike_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_label_hike_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_content_hike_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_label_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_label_details"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_content_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_label_directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_label_directions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/information_content_directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>